# agentic-data-analyst

./: .gitignore  Dockerfile  docker-entrypoint.sh  flights.db  pyproject.toml
app/: config.py  crew_init.py  database.py  lifetime.py  main.py
app/api/: base.py  question.py
app/etl/: extract.py
app/llms/: azure_openai.py
app/models/: api_models.py  crew_response.py
app/tools/: sql_tools.py
frontend/: .env  README.md  index.html  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AnalysisInput.tsx  Sidebar.tsx
frontend/src/components/analysis/: AnalysisDataset.tsx  AnalysisVisualizations.tsx
frontend/src/components/dataset/: DatasetControls.tsx  DatasetTable.tsx
frontend/src/pages/: Dataset.tsx  Flights.tsx  Index.tsx  Visuals.tsx
